[FIX] web: Align arrow and title inside control panel on mobile devices
This commit is linked to task ID: 1893168

--- a/addons/web/static/src/less/control_panel.less
+++ b/addons/web/static/src/less/control_panel.less
@@ -14,7 +14,9 @@
 
         > li {
             .o-text-overflow(@max-width: 90%);
-
+            @media (max-width: @screen-xs-max) {
+                padding-top: 3px;
+            }
             > a {
                 cursor: pointer;
             }
